--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                       
                       </div>
                  </fieldset> 
-                 <button type="submit" onclick='return SubForms()' style="margin:1% 30%; height: auto; border-radius: 7px;font-size: 18px; width: 40%;"> start</button>
+                 <button  onclick='SubForms()' style="margin:1% 30%; height: auto; border-radius: 7px;font-size: 18px; width: 40%;"> start</button>
             </form>	
 			</div>
       <!-- onclick='SubForm()'  onsubmit="return SubForm()" -->
